# smart_light_finder

./: .gitignore  Pipfile  README.md  example_wemo_rooms.toml  office_scene_configuration.yaml  office_scene_configuration_buggy.yaml  old_smart_light_finder.py  pyproject.toml  smart_light_finder.py
smart_light_finder/: build_home_configuration.py  build_nanoleaf_configuration.py  build_room_configuration.py  build_scene_configuration.py  build_wemo_room_configuration.py  inquirepy_util.py  list_hue_devices.py  nanoleaf.py  termcolor_util.py  wemo_topology.py
smart_light_finder/hue/: config.py  topology.py
