[tool.poetry]
name = "smart_light_finder"
version = "0.1.0"
description = ""
authors = ["Daniel Kulla <dkulla129@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "*"
inquirerpy = "^0.3.3"
pywemo = "^0.8.0"
toml = "^0.10.2"
termcolor = "^1.1.0"
nanoleafapi = "^2.1.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
list_hue_devices = "smart_light_finder.list_hue_devices:main"
build_wemo_room_configuration = "smart_light_finder.build_wemo_room_configuration:main"
build_scene_configuration = "smart_light_finder.build_scene_configuration:main"